# waybar_modules

./: .gitignore  media_install.sh  spotify.rs  weather_install.sh
waybar_media_display/: Cargo.toml  README.md  install.sh
waybar_media_display/src/: args.rs  main.rs
waybar_weather_display/: Cargo.toml  README.md
waybar_weather_display/src/: args.rs  main.rs  processor.rs
