[package]
name = "waybar_media_display"
edition = "2021"
version = "0.1.0"
description = "Waybar Media Display Module using playerctl"
rust-version = "1.62.1"
authors= ["Michael Petersen <development@michaelpetersen.co>"]
license = "GPL"
repository ="https://github.com/MichaelPetersen22/waybar_modules.git"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
