[package]
name = "waybar_weather_display"
edition = "2021"
version = "0.0.1"
description = "Waybar Weather Display Module using OpenMeteo API"
rust-version = "1.62.1"
authors= ["Michael Petersen <development@michaelpetersen.co>"]
license = "GPL-3.0-or-later"
repository ="https://github.com/MichaelPetersen22/waybar_modules.git"

[profile.release]
opt-level = 3

[dependencies]
